--- a/router/xs-app.json
+++ b/router/xs-app.json
@@ -1,7 +1,16 @@
 {
   "welcomeFile": "/cp.portal",
   "authenticationMethod": "none",
-  "routes": [
+  "routes": [{
+    "source": "^/sapui5_resources/(.*)$",
+    "target": "$1",
+    "destination": "sapui5_provider"
+  },
+    {
+      "source": "^/s4c/(.*)",
+      "target": "/$1",
+      "destination": "S4C"
+    },
     {
       "source": "/api/(.*)",
       "target": "$1",
