--- a/mta.yaml
+++ b/mta.yaml
@@ -1,35 +1,9 @@
 ﻿ID: HiMTA
-_schema-version: '2.1'
+_schema-version: 2.1
 version: 0.0.1
 parameters:
   deploy_mode: html5-repo
 modules:
--
-  name: router
-  type: nodejs
-  path: router
-  parameters:
-    disk-quota: 256M
-    memory: 256M
-  properties:
-    XS_APP_LOG_LEVEL: debug
-  requires:
-  - {name: pt_dest}
-  - {name: pt_conn}
-  - {name: pt_uaa}
-  - {name: pt_router}
-  - {name: pt_service, group: destinations, properties: {name: pt_service, url: '~{url}'}}
--
-  name: deployer
-  type: com.sap.html5.application-content
-  path: deployer
-  requires:
-  - {name: pt_deployer}
-  build-parameters:
-    requires: [{name: user_create, artifacts: ['./*'], target-path: resources/user_create},{name: user_display, artifacts: ['./*'], target-path: resources/user_display}]
-  parameters:
-    disk-quota: 256M
-    memory: 256M
 -
   name: db
   type: hdb
@@ -46,15 +20,14 @@ modules:
   type: nodejs
   path: service
   requires:
-  - {name: pt_uaa}
   - {name: pt_db}
   - {name: pt_hdi}
+  - {name: pt_uaa}
   provides:
   - {name: pt_service, properties: {url: '${default-url}'}}
   parameters:
-    register-service-url: true
-    memory: 512M
-    disk_quota: 512M
+    memory: 128M
+    disk_quota: 128M
 -
   name: user_create
   type: html5
@@ -77,6 +50,32 @@ modules:
     builder: grunt
   requires:
   - {name: pt_uaa}
+-
+  name: router
+  type: nodejs
+  path: router
+  parameters:
+    disk-quota: 256M
+    memory: 128M
+  properties:
+    XS_APP_LOG_LEVEL: debug
+  requires:
+  - {name: pt_dest}
+  - {name: pt_conn}
+  - {name: pt_uaa}
+  - {name: pt_router}
+  - {name: pt_service, group: destinations, properties: {name: pt_service, url: '~{url}', forwardAuthToken: true}}
+-
+  name: deployer
+  type: com.sap.html5.application-content
+  path: deployer
+  requires:
+  - {name: pt_deployer}
+  build-parameters:
+    requires: [{name: user_create, artifacts: ['./*'], target-path: resources/user_create},{name: user_display, artifacts: ['./*'], target-path: resources/user_display}]
+  parameters:
+    disk-quota: 256M
+    memory: 128M
 resources:
 -
   name: pt_uaa
