--- a/web/author_display/webapp/manifest.json
+++ b/web/author_display/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
 	"_version": "1.12.0",
 	"sap.app": {
-		"id": "user_display",
+		"id": "author_display",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
@@ -32,12 +32,15 @@
 			"id": "fcl"
 		},
 		"models": {
+			"i18n": {
+				"type": "sap.ui.model.resource.ResourceModel",
+				"settings": {
+					"bundleName": "author_display.i18n.i18n"
+				}
+			},
 			"authors": {
 				"dataSource": "mainService",
 				"settings": {
-					"defaultBindingMode": "TwoWay",
-					"defaultCountMode": "Inline",
-					"useBatch": false,
 					"disableHeadRequestForToken": true
 				}
 			}
