Add config model

--- a/web/author_display/webapp/manifest.json
+++ b/web/author_display/webapp/manifest.json
@@ -43,6 +43,10 @@
 				"settings": {
 					"disableHeadRequestForToken": true
 				}
+			},
+			"config":{
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "./model/config.json"
 			}
 		},
 		"dependencies": {
