--- a/web/author_display/webapp/model/config.json
+++ b/web/author_display/webapp/model/config.json
@@ -13,7 +13,12 @@
   "newAddressHome":{
     "value": ""
   },
+  "newBookName":{
+    "value": ""
+  },
   "editBtn": {
     "enabled": true
-  }
+  },
+  "addressURI": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsjs/address/address.xsjs",
+  "bookURI": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsjs/book/book.xsjs"
 }
