Add some bundles

--- a/web/author_display/webapp/model/config.json
+++ b/web/author_display/webapp/model/config.json
@@ -16,9 +16,17 @@
   "newBookName":{
     "value": ""
   },
+  "authorsTableTitle":{
+    "value": ""
+  },
+  "newAuthorNameInput":{
+    "value": ""
+  },
   "editBtn": {
     "enabled": true
   },
+
   "addressURI": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsjs/address/address.xsjs",
-  "bookURI": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsjs/book/book.xsjs"
+  "bookURI": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsjs/book/book.xsjs",
+  "authorURI": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsjs/author/author.xsjs"
 }
