--- a/mta.yaml
+++ b/mta.yaml
@@ -5,6 +5,32 @@ parameters:
   deploy_mode: html5-repo
 modules:
 -
+  name: router
+  type: nodejs
+  path: router
+  parameters:
+    disk-quota: 256M
+    memory: 256M
+  properties:
+    XS_APP_LOG_LEVEL: debug
+  requires:
+  - {name: pt_dest}
+  - {name: pt_conn}
+  - {name: pt_uaa}
+  - {name: pt_router}
+  - {name: pt_service, group: destinations, properties: {name: pt_service, url: '~{url}'}}
+-
+  name: deployer
+  type: com.sap.html5.application-content
+  path: deployer
+  requires:
+  - {name: pt_deployer}
+  build-parameters:
+    requires: [{name: author_display, artifacts: ['./*'], target-path: resources/author_display}]
+  parameters:
+    disk-quota: 256M
+    memory: 256M
+-
   name: db
   type: hdb
   path: db
@@ -13,8 +39,8 @@ modules:
   provides:
   - {name: pt_db}
   parameters:
-    memory: 128M
-    disk_quota: 128M
+    memory: 1024M
+    disk_quota: 1024M
 -
   name: service
   type: nodejs
@@ -22,12 +48,11 @@ modules:
   requires:
   - {name: pt_db}
   - {name: pt_hdi}
-  - {name: pt_uaa}
   provides:
   - {name: pt_service, properties: {url: '${default-url}'}}
   parameters:
-    memory: 128M
-    disk_quota: 128M
+    memory: 512M
+    disk_quota: 512M
 -
   name: author_display
   type: html5
@@ -39,45 +64,6 @@ modules:
     builder: grunt
   requires:
   - {name: pt_uaa}
--
-  name: router
-  type: nodejs
-  path: router
-  parameters:
-    disk-quota: 256M
-    memory: 128M
-  properties:
-    XS_APP_LOG_LEVEL: debug
-  requires:
-  - {name: pt_dest}
-  - {name: pt_conn}
-  - {name: pt_uaa}
-  - {name: pt_router}
-  - {name: pt_service, group: destinations, properties: {name: pt_service, url: '~{url}', forwardAuthToken: true}}
--
-  name: deployer
-  type: com.sap.html5.application-content
-  path: deployer
-  requires:
-  - {name: pt_deployer}
-  build-parameters:
-    requires: [{name: author_display, artifacts: ['./*'], target-path: resources/author_display}]
-  parameters:
-    disk-quota: 256M
-    memory: 128M
-#-
-#  name: flp
-#  type: com.sap.portal.site-content
-#  path: flp
-#  parameters:
-#    stack: cflinuxfs3
-#    memory: 128M
-#    buildpack: 'https://github.com/cloudfoundry/nodejs-buildpack/releases/download/v1.6.39/nodejs-buildpack-cflinuxfs3-v1.6.39.zip'
-#  requires:
-#  - name: portal_resources_HiMTA
-#  - name: uaa_HiMTA
-#  - name: pt_deployer
-#  - name: deployer
 resources:
 -
   name: pt_uaa
