--- a/web/author_display/webapp/manifest.json
+++ b/web/author_display/webapp/manifest.json
@@ -15,7 +15,7 @@
 		},
 		"dataSources": {
 			"mainService": {
-				"uri": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj378edac5.cfapps.eu10.hana.ondemand.com/xsodata/himta.xsodata/",
+				"uri": "https://p2001062767trial-yegorstsefanovich-leverx-learning-proj392a3ec7.cfapps.eu10.hana.ondemand.com/api/xsodata/himta.xsodata/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0"
