--- a/javaCFMTA/service/pom.xml
+++ b/javaCFMTA/service/pom.xml
@@ -80,8 +80,19 @@
 			<artifactId>s4hana-all</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.8</version>
+			<scope>provided</scope>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
